@@ -46,35 +46,34 @@ public class ClassPathResourceLoader implements ResourceLoader {
         return this.classLoader;
     }
     private String formatResourcePath(String resourcePath) {
-        String $resourcePath = this.packageName + (resourcePath.charAt(0) == '/' ? resourcePath : "/" + resourcePath);
-        $resourcePath = $resourcePath.replaceAll("/{2}", "/");
-        if ($resourcePath.charAt(0) == '/')
-            $resourcePath = $resourcePath.substring(1);
-        return $resourcePath;
+        String path = this.packageName + (resourcePath.charAt(0) == '/' ? resourcePath : "/" + resourcePath);
+        path = path.replaceAll("/{2}", "/");
+        if (path.charAt(0) == '/') {
+            path = path.substring(1);
+        }
+        return path;
     }
     public InputStream getResourceAsStream(String resourcePath) {
-        if (StringUtils.isBlank(resourcePath))
+        if (StringUtils.isBlank(resourcePath)) {
             return null;
+        }
         return this.classLoader.getResourceAsStream(formatResourcePath(resourcePath));
     }
     public boolean canModify(String resourcePath) throws IOException {
-        if (StringUtils.isBlank(resourcePath))
+        if (StringUtils.isBlank(resourcePath)) {
             return false;
+        }
         URL url = this.classLoader.getResource(formatResourcePath(resourcePath));
-        if (url.getProtocol().contains("file"))
+        if (url.getProtocol().contains("file")) {
             return true;
+        }
         return false;
     }
     public boolean exist(String resourcePath) throws IOException {
-        if (StringUtils.isBlank(resourcePath))
+        if (StringUtils.isBlank(resourcePath)) {
             return false;
+        }
         URL url = this.classLoader.getResource(formatResourcePath(resourcePath));
         return !(url == null);
-    }
-    public void close(Object resource) throws IOException {
-        if (resource == null)
-            return;
-        if (resource instanceof InputStream)
-            ((InputStream) resource).close();
     }
 }
