@@ -8,6 +8,7 @@
         --此项更改有助于分页工具类应用到更广的场景下。
     02.修改Result接口的addMessage方法，使其子类在重写的时候减少警告的发生。
     03.Hasor内部实现factory相关的简化重构。
+    04.resource插件功能简单化，之前的插件是直接迁移自Hasor-WebUI项目。
 * 修复:
     01.修复使用“apiBinder.bindType(PojoBean.class).asEagerSingleton()”方式声明单例失效的问题。
 
